--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,3 @@
-<h1>Elon Musk's Companies</h1>
-<p>Hello and welcome to Daniel Kimbel's Thing-O on Elon Musk's companies.</p>
-<p>Musk is currently most involved with <a href="http://www.teslamotors.com/">Tesla Motors</a> and <a href="http://www.spacex.com/">SpaceX</a>; he serves as CEO of each.</p>
-<p>Tesla Motors is building high-end, all-electric vehicles. To date, they have produced the Tesla Roadster and Model S, and is developing the Model X.</p>
-<p>SpaceX is a commercial spaceflight organization that is aiming to make outer space more accessible to mankind.</p>
+<h1>Spaceships!</h1>
+<p>Hello and welcome to Daniel Kimbel's Thing-O on spaceships. Why spaceships?</p>
+<p>Because spaceships are cool.</p>
