Added navigation to each page.

--- a/views/confirm_scrapping.erb
+++ b/views/confirm_scrapping.erb
@@ -1,1 +1,8 @@
 <%= "#{@name} scrapped." %>
+
+<nav>
+  <a href="/factory">Visit the Factory</a> |
+  <a href="/hangar">Visit the Hangar</a> |
+  <a href="/workshop">Visit the Workshop</a> |
+  <a href="/scrapyard">Return to the Scrapyard</a>
+</nav>
