--- a/views/factory.erb
+++ b/views/factory.erb
@@ -5,3 +5,9 @@
   <br />
   <input type="submit" value="Build Spaceship" />
 </form>  
+
+<nav>
+  <a href="/hangar">Visit the Hangar</a> |
+  <a href="/workshop">Visit the Workshop</a> |
+  <a href="/scrapyard">Visit the Scrapyard</a>
+</nav>
