--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,10 @@
 <h1>Spaceships!</h1>
 <p>Hello and welcome to Daniel Kimbel's Thing-O on spaceships. Why spaceships?</p>
 <p>Because spaceships are cool.</p>
+
+<nav>
+  <a href="/factory">Visit the Factory</a> |
+  <a href="/hangar">Visit the Hangar</a> |
+  <a href="/workshop">Visit the Workshop</a> |
+  <a href="/scrapyard">Visit the Scrapyard</a>
+</nav>
