--- a/views/scrapyard.erb
+++ b/views/scrapyard.erb
@@ -4,3 +4,9 @@
   <input id="id" name="id" type="integer"/>
   <input type="submit" value="Scrap Spaceship" />
 </form>  
+
+<nav>
+  <a href="/factory">Visit the Factory</a> |
+  <a href="/hangar">Visit the Hangar</a> |
+  <a href="/workshop">Visit the Workshop</a>
+</nav>
