--- a/views/work_confirmed.erb
+++ b/views/work_confirmed.erb
@@ -1,1 +1,8 @@
 <%= "Updated #{@curr_ship.name}!" %>
+
+<nav>
+  <a href="/factory">Visit the Factory</a> |
+  <a href="/hangar">Visit the Hangar</a> |
+  <a href="/workshop">Return to the Workshop</a> |
+  <a href="/scrapyard">Visit the Scrapyard</a>
+</nav>
