--- a/views/workshop.erb
+++ b/views/workshop.erb
@@ -17,3 +17,9 @@
   <br />
   <input type="submit" value="Alter Spaceship" />
 </form>  
+
+<nav>
+  <a href="/factory">Visit the Factory</a> |
+  <a href="/hangar">Visit the Hangar</a> |
+  <a href="/scrapyard">Visit the Scrapyard</a>
+</nav>
