--- a/views/new_ship_confirmed.erb
+++ b/views/new_ship_confirmed.erb
@@ -1,1 +1,8 @@
 <%= "#{params[:name]} constructed!" %>
+
+<nav>
+  <a href="/factory">Return to the Factory</a> |
+  <a href="/hangar">Visit the Hangar</a> |
+  <a href="/workshop">Visit the Workshop</a> |
+  <a href="/scrapyard">Visit the Scrapyard</a>
+</nav>
